<resources>
    <string name="app_name">Olio_Ohjelmointi_Harkkatyo_ugh</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sportti_ppi">SporttiÄppi</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_workout">Add workout</string>
    <string name="add_meal">Add meal</string>
    <string name="meal_history">Meal History</string>
    <string name="register">Register</string>
    <string name="password_requirements">Password must be at least 12 characters long, contain at least 1 lower case letter, 1 UPPER CASE letter, 1 number and 1 special character</string>
    <string name="IOException">Faulty input</string>
    <string name="FileNotFound">File Not Found</string>
    <string name="invalid_credentials">Invalid username or password</string>
    <string name="username_requirements">Username must be at least 3 characters long and contain only alphanumeric characters</string>
</resources>